--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -9,6 +9,13 @@
         margin: 0 auto;
         background-color: white;
         border-radius: 10px;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: 450px;
 
         .login-content {
             padding: 10px;
@@ -22,6 +29,17 @@
 
             .login-input {
                 margin: 7px 0;
+
+                .custom-input-password {
+                    position: relative;
+
+                    i {
+                        position: absolute;
+                        right: 8px;
+                        top: 10px;
+                        cursor: pointer;
+                    }
+                }
             }
 
             .btn-login {
