--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -164,6 +164,7 @@
         display: flex;
         align-items: flex-end;
         justify-content: center;
+        padding-bottom: 10px;
         background-image: linear-gradient(rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 1));
 
 
