--- a/src/containers/HomePage/Section/Specialty.scss
+++ b/src/containers/HomePage/Section/Specialty.scss
@@ -2,18 +2,89 @@
     height: 330px;
     background: #f5f5f5;
     border: 1px solid red;
+
+    .specialty-container {
+        margin: 0px 100px 0px 200px;
+        //margin: 0px 100px;
+        display: flex;
+        flex-direction: column;
+
+        .specialty-header {
+            height: 60px;
+            margin-bottom: 30px;
+            padding-top: 30px;
+
+            .title-section {
+                font-size: 22px;
+                font-weight: 600;
+            }
+            .btn-section {
+                float: right;
+                padding: 10px 15px;
+                border: none;
+                outline: none;
+                display: block;
+                background: #ebebeb;
+                color: black;
+                cursor: pointer;
+                text-transform: uppercase;
+                &:hover{
+                    color: #fff;
+                    background: #f7d800;
+                }
+            }
+        }
+        .specialty-body {   
+
+            //reset slick slider css
+
+            .specialty-customize {
+                .bg-image {
+                    //width: 278px;
+                    width: 300px;
+                    height: 150px;
+                    background: url('../../../assets/specialty/co-xuong-khop.jpg');
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                    background-color: #eee;
+                }
+            }
+
+            .slick-prev {
+                left: -10px !important;
+                z-index: 1000 !important;
+                height: 48px !important;
+                width: 44px !important;
+                background: #fff !important;
+                border: 2px solid #d7d7d7 !important;
+
+                &:hover {
+                    background: #eceaea !important;
+                }
+
+            }
+            .slick-prev:before, .slick-next:before {
+                font-family: FontAwesome !important;
+                color: red !important;
+                // content: "\e257" !important;
+            }
+            
+            .slick-next {
+                right: -10px !important;
+                z-index: 1000 !important;
+                height: 48px !important;
+                width: 44px !important;
+                background: #fff !important;
+                border: 2px solid #d7d7d7 !important;
+
+                &:hover {
+                    background: #eceaea !important;
+                }
+
+            }
+                    
+        }
+    }
+    
 }
 
-//reset slick slider css
-.slick-prev {
-    border: 1px solid green !important;
-    position: relative !important;
-    left: 0 !important;
-
-}
-
-.slick-next {
-    border: 1px solid red !important;
-    right: 0 !important;
-
-}
