--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -40,6 +40,11 @@
         &.section-outstanding-doctor {
             background: #f5f5f5;
         }
+        &.section-about {
+            height: 500px !important;
+            border-top: 1px solid #f5f5f5;
+            border-bottom: 1px solid #f5f5f5;
+        }
        
 
         .section-body {   
@@ -133,4 +138,45 @@
         }
     }
 
+}
+
+.home-footer {
+    text-align: center;
+    padding-top: 8px;
+    background: #64b9e5;
+    color: black;
+    padding: 10px;
+    a {
+        text-decoration: unset;
+        
+    }
+}
+
+
+.section-about{
+    padding: 0 100px 0 200px;
+    //padding: 0 100px;
+
+    .section-about-header {
+        padding: 20px 10px;
+        font-size: 22px;
+        font-weight: 600;
+    }
+    .section-about-content {
+        display: flex;
+        gap: 15px;
+        width: 100%;
+        
+        .content-left {
+            width: 60%;
+        }
+        .content-right {
+            width: 40%;
+            p{
+                text-align: justify;
+                font-style: italic;
+                padding: 15px;
+            }
+        }
+    }
 }
