--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -35,6 +35,15 @@
                 height: 35px;
                 line-height: 35px;
                 text-transform: none;
+
+                &.active {
+                    a {
+                        color: #04AA6D !important;
+
+                    }
+                    background-color: #ededed;
+                    
+                }
                 .menu-link {
                     text-decoration: none;
                     color: $text-in-light;
@@ -65,7 +74,8 @@
                         }
                         &.active a {
                             font-weight: 500;
-                            color: $colormain;
+                            // color: $colormain;
+                            color: #04AA6D;
                         }
                     }
                 }
