--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -21,6 +21,9 @@
         }
     }
     .languages {
+        .welcome {
+            margin-right: 10px;
+        }
         .language-en {
             margin-right: 15px;
             margin-left: 10px;
