--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -135,6 +135,7 @@
     }
     .section-customize {
         padding: 5px;
+        cursor: pointer;
         
         .customize-border {
             border: 1px solid orange;
