update-twenty-six

--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -15,7 +15,7 @@
         outline: none;
         border: none;
         padding: 5px;
-        background: #007bff;
+        background: #ffc107;
         color: #fff;
         cursor: pointer;
 
@@ -23,6 +23,25 @@
             opacity: 0.9;
         }
     }
+
+    .create-content-doctor {
+        margin-top: 20px;
+        margin-bottom: 30px;
+        border-radius: 3px;
+        outline: none;
+        border: none;
+        padding: 5px;
+        background:  #007bff;
+        color: #fff;
+        cursor: pointer;
+
+        &:hover{
+            opacity: 0.9;
+        }
+    }
+
+
+    
     .more-infor {
         display: flex;
         gap: 15px;
