--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,11 +1,11 @@
 .doctor-detail-container {
     height: 500px;
-    border: 1px solid red;
-    margin: 0 100px;
-
+    // margin: 0 100px;
+    
     .intro-doctor {
         display: flex;
-        border: 1px solid gray;
+        padding: 10px 100px;
+        background-color: rgb(89, 174, 205);
         .content-left{
             width: 20%;
             background: center center no-repeat;
@@ -34,6 +34,24 @@
             }
             
         }
+    }
+    .detail-infor-doctor{
+        padding: 10px 100px;
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        background-color: #f9f9f9;
+        
+        h3{
+            font-size: 17px;
+            
+        }
+        img{
+            width: 100%;
+        }
+    }
+    .comment-doctor{
+        height: 50px;
+        
     }
 
 }
