update-twenty-nine

--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -20,7 +20,15 @@
             border: 1px solid gray;
         }
     }
+
+    .btn-schedule {
+        &.active {
+            background-color: #fff8ae;
+        }
+    }
     .btn-save-schedule{
         margin-top: 20px;
+
+        
     }
 }
