update-thirty three

--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,5 +1,5 @@
 .doctor-schedule-container{
-    border-right: 1px solid green;
+    border-right: 1px solid #ddd;
     height: 100%;
     .all-schedule{
         select {
@@ -30,23 +30,43 @@
         }
         .time-content{
             
+            
+            .time-content-btns{
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
+            
 
-            button{
-                padding: 8px 10px;
-                border: none;
-                outline: none;
-                background-color: #fff04b;
-                min-width: 120px;
-                border-radius: 3px;
-                font-weight: 600;
-                color: #333;
-                &:hover{
-                    background-color: #45c3d2;
-                    color: white;
+                button{
+                    padding: 8px 10px;
+                    border: none;
+                    outline: none;
+                    background-color: #fff04b;
+                    
+                    border-radius: 3px;
+                    font-weight: 600;
+                    color: #333;
+                    &:hover{
+                        background-color: #45c3d2;
+                        color: white;
+                    }
                 }
+                .btn-vie {
+                    min-width: 120px;
+                }
+                .btn-en {
+                    min-width: 150px;
+                    //min-width: 170px;
+                }
+                .no-schedule{
+                    font-style: italic;
+                    font-weight: 200;
+                    font-size: 14px;
+                }
+
+            }
+            .book-free{
+                margin-top: 10px;
             }
         }
     }
