update-thirty seven

--- a/src/containers/Patient/Doctor/DoctorExtraInfor.scss
+++ b/src/containers/Patient/Doctor/DoctorExtraInfor.scss
@@ -19,9 +19,12 @@
     }
     .content-down{
         .short-infor{
-            span{
+            .detail{
                 cursor: pointer;
                 color: #45c3d2;
+            }
+            .currency{
+                margin: 0 5px;
             }
         }
         .title-price{
