--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -5,7 +5,10 @@
         //background-color: rgb(89, 174, 205);
         .content-left{
             width: 20%;
-            background: center center no-repeat;
+            //background: center center no-repeat;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             border-radius: 50%;
             //margin: 10px 20px;
             // height: 120px;
