--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,14 +1,38 @@
 .detail-specialty-container {
     .description-spcialty {
-        border: 1px solid red;
-        //height: 200px;
+        //background-color: white !important;
+        background-color: #49bce2 !important;
+        
+        padding: 10px;
+        margin: 15px 0;
+        /*h1, 
+        h2, 
+        h3 //{
+            font-size: 16px;
+            font-weight: 600px;
+            
+
+        }*/
+        
     }
     .search-sp-doctor{
-        
+        select {
+            height: 30px;
+            padding: 5px 8px;
+            border: none;
+            outline: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
     }
 
     .detail-specialty-body{
-        margin: 0 100px;
+        padding: 0 100px;
+        background: #eee;
+        
+        
+        display: flex;
+        flex-direction: column;
     }
 
     .each-doctor{
@@ -25,6 +49,13 @@
         .dt-content-left{
             width: 50%;
             border-right: 1px solid #ddd;
+
+            .profile-doctor-container{
+                .down{
+                    padding: 5px;
+                }
+
+            }
 
         }
         .dt-content-right{
@@ -46,6 +77,8 @@
                     padding-left: 0 !important;
                 }
             }
+
+            
 
         }
     }
