--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,7 +1,7 @@
 .detail-specialty-container {
     .description-spcialty {
-        //background-color: white !important;
-        background-color: #49bce2 !important;
+        background-color: white !important;
+        //background-color: #49bce2 !important;
         
         padding: 10px;
         margin: 15px 0;
