update-Forty-nine

--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -69,7 +69,7 @@
                 }
 
                 &.section-medical-facility {
-                    background-image: url('../../assets/medical-facility/benh-vien-thu-cuc.jpg');
+                    // background-image: url('../../assets/medical-facility/benh-vien-thu-cuc.jpg');
                 }
                 &.section-outstanding-doctor {
                     //background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
