--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -1,3 +1,9 @@
+div._loading_overlay_wrapper {
+  position: unset;
+  ._loading_overlay_overlay {
+    z-index: 1000000;
+  }
+}
 .manage-patient-container{
     padding: 0 15px;
     .m-p-title{
